@@ -12,6 +12,7 @@ v3.10 (unreleased)
     * Fix SMTP security issues
     * Fix test suite
     * Drop support for Python 3.2 and 3.3
+    * Remove `__contributors__` from the `rss2email` module.
 
 v3.9 (2014-09-01)
     * Catch and error out if a user adds a feed with a duplicate name
